# rho-bot

./: .gitignore  .vercelignore  Dockerfile  Procfile  README.md  railway.json  requirements.txt
.github/workflows/: release.yml
desktop/: index.html  package-lock.json  package.json  tailwind.config.js
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: accessibility.rs  agent.rs  capture.rs  event_monitor.rs  events.rs  executor.rs  lib.rs  main.rs  platform.rs  settings.rs  ws_client.rs
desktop/src/components/: ActivityLog.tsx  LoginScreen.tsx  SettingsPanel.tsx  StatusPanel.tsx
inference/: app.py
ios/rho-bot/: Kernels.metal  rho_botApp.swift
ios/rho-bot.xcodeproj/: project.pbxproj
ios/rho-bot/Models/: AgentModels.swift  AuthModels.swift
ios/rho-bot/Services/: APIClient.swift  ElevenLabsService.swift  KeychainHelper.swift  ScreenStreamClient.swift  WebSocketClient.swift
ios/rho-bot/ViewModels/: AgentViewModel.swift  AuthViewModel.swift  ChatViewModel.swift  ScreenViewModel.swift
ios/rho-bot/Views/: ChatView.swift  DashboardView.swift  FluidRecordButton.swift  GoalInputView.swift  LoginView.swift  MainTabView.swift  ScreenView.swift  SessionsView.swift  SettingsView.swift  VoicePickerView.swift
server/: .env.example  Dockerfile  config.py  deps.py  main.py  requirements-server.txt  requirements.txt
server/models/: database.py
server/routers/: api.py  auth.py  billing.py  screen.py  voice.py  ws.py
server/schemas/: action.py  auth.py  billing.py  context.py  dashboard.py  training.py
server/services/: auth_service.py  billing_service.py  context_service.py  model_arch.py  model_security.py  model_service.py  postprocessing.py  preprocessing.py  screenshot_service.py
website/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/app/dashboard/: layout.tsx  page.tsx
website/app/download/: page.tsx
website/app/login/: page.tsx
website/app/pricing/: page.tsx
website/components/: AuthForm.tsx  DashboardShell.tsx  Footer.tsx  Navbar.tsx  PricingCard.tsx
website/lib/: api.ts  pricing.ts  releases.ts
(+9 files in other folders)
