[package]
name = "rho-bot-desktop"
version = "0.1.0"
edition = "2021"
description = "rho-bot desktop agent"

[lib]
name = "rho_bot_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rho-bot-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
log = "0.4"
env_logger = "0.11"
url = "2"
foreign-types-shared = "0.3"
dirs = "6"

# macOS frameworks via core-foundation / core-graphics
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
